[metadata]
name = layer_enforcer
version = attr: layer_enforcer.__version__
author = Anatolii Aniskovych
author_email = lin.aaa.lin@gmail.com
url = https://github.com/ZipFile/layer-enforcer
description = Relaxed layer architecture linter based on the import graph.
long_description = file: README.rst
long_description_content_type = text/x-rst
license_file = LICENSE
keywords = clean architecture, dependency rule
license = BSD 2-Clause License
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Utilities

[options]
include_package_data = True
package_dir =
    =src
packages = find:
install_requires =
    grimp >= 1.3
    pyyaml >= 5.1.0
    tomli>=1.0.0;python_version<"3.11"

[options.entry_points]
console_scripts =
    layer-enforcer = layer_enforcer.cli:main

[options.extras_require]
test =
    pretend
    pytest
    pytest-cov
lint =
    black
    flake8
    flake8-print
    isort
    mypy

[options.package_data]
layer_enforcer = py.typed

[options.packages.find]
where = src

[flake8]
max-line-length = 88
extend-ignore = E203,T002
application-import-names = layer_enforcer
