[metadata]
name = demo_layered
version = 1.0.0
description = A demo project for testing layer-enforcer.
long_description = file: README.rst
long_description_content_type = text/x-rst
license_file = UNLICENSE
keywords = clean architecture, dependency rule
license = BSD 2-Clause License
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: The Unlicense (Unlicense)

[options]
include_package_data = True
package_dir =
    =src
packages = find:
install_requires =
    sqlalchemy
    fastapi
    layer_enforcer

[options.packages.find]
where = src
